--- a/src/DNTCaptcha.Blazor/Components/DntInputCaptcha.razor
+++ b/src/DNTCaptcha.Blazor/Components/DntInputCaptcha.razor
@@ -1,17 +1,19 @@
-@namespace DNTCaptcha.Blazor
+@namespace DNTCaptcha.Blazor 
 
 <div style="font-family: '@FontName';" class="@CaptchaDivClass">
-	<canvas
-	   	id="@ElementId"
-                @attributes="@AdditionalAttributes"
-                @ref="@ReferenceToCanvas"
-                class="@CaptchaCanvasClass"
-		height="0" width="0"></canvas>
-	@if(ShowRefreshButton)
-	{
-		<a class="@RefreshButtonClass"
-			title="@RefreshButtonTitle"
-			style="cursor: pointer;"
-			@onclick="@(()=>ShowCaptchaAsync())"></a>
-	}
+    <canvas
+        id="@ElementId"
+        @attributes="@AdditionalAttributes"
+        @ref="@ReferenceToCanvas"
+        class="@CaptchaCanvasClass"
+        height="0" width="0">
+    </canvas>
+    @if (ShowRefreshButton)
+    {
+        <a class="@RefreshButtonClass"
+           title="@RefreshButtonTitle"
+           style="cursor: pointer;"
+           @onclick="@(() => ShowCaptchaAsync())">
+        </a>
+    }
 </div>
