Make it compatible with RTL environments

--- a/src/DNTCaptcha.Blazor/Components/DntInputCaptcha.razor
+++ b/src/DNTCaptcha.Blazor/Components/DntInputCaptcha.razor
@@ -2,7 +2,7 @@
 
 <div style="font-family: '@FontName';" class="@CaptchaDivClass">
     <canvas
-        id="@ElementId"
+        id="@ElementId" dir="ltr"
         @attributes="@AdditionalAttributes"
         @ref="@ReferenceToCanvas"
         class="@CaptchaCanvasClass"
