--- a/src/DNTCaptcha.Blazor.WasmSample/Client/Shared/MainLayout.razor
+++ b/src/DNTCaptcha.Blazor.WasmSample/Client/Shared/MainLayout.razor
@@ -25,9 +25,9 @@
                 <NavLink class="list-group-item list-group-item-action" href="" Match="NavLinkMatch.All">
                     DntInputCaptcha
                 </NavLink>
-                <a class="list-group-item list-group-item-action" href="routed-login-page">
+                <NavLink class="list-group-item list-group-item-action" href="routed-login-page">
                     DntInputCaptcha on a routed page
-                </a>
+                </NavLink>
                 <a class="list-group-item list-group-item-action" href="https://github.com/VahidN/DNTCaptcha.Blazor">
                     Back to Github
                 </a>
