Use a separate component to define captcha's

--- a/src/DNTCaptcha.Blazor.WasmSample/Client/_Imports.razor
+++ b/src/DNTCaptcha.Blazor.WasmSample/Client/_Imports.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using DNTCaptcha.Blazor.WasmSample.Client
 @using DNTCaptcha.Blazor.WasmSample.Client.Shared
+@using DNTCaptcha.Blazor.WasmSample.Client.Pages.Components
 
