--- a/src/DNTCaptcha.Blazor.ServerSample/Shared/MainLayout.razor
+++ b/src/DNTCaptcha.Blazor.ServerSample/Shared/MainLayout.razor
@@ -25,6 +25,9 @@
                 <NavLink class="list-group-item list-group-item-action" href="" Match="NavLinkMatch.All">
                     DntInputCaptcha
                 </NavLink>
+                <NavLink class="list-group-item list-group-item-action" href="routed-login-page">
+                    DntInputCaptcha on a routed page
+                </NavLink>
                 <a class="list-group-item list-group-item-action" href="https://github.com/VahidN/DNTCaptcha.Blazor">
                     Back to Github
                 </a>
