--- a/src/DNTCaptcha.Blazor.ServerSample/_Imports.razor
+++ b/src/DNTCaptcha.Blazor.ServerSample/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
 @using DNTCaptcha.Blazor.ServerSample
 @using DNTCaptcha.Blazor.ServerSample.Shared
+@using DNTCaptcha.Blazor.ServerSample.Pages.Components
