Fix accessibility issue with refresh button, Close #9

--- a/src/DNTCaptcha.Blazor.ServerSample/Pages/Components/Login.razor
+++ b/src/DNTCaptcha.Blazor.ServerSample/Pages/Components/Login.razor
@@ -67,7 +67,7 @@
                         TimerInterval = "@TimeSpan.FromMilliseconds(2500)"
                         CaptchaCanvasClass = ""
 			CaptchaDivClass = "d-flex justify-content-center align-self-center ms-1"
-                        RefreshButtonClass = "bi-arrow-repeat btn-lg"
+                        RefreshButtonClass = "bi-arrow-repeat btn"
 			RefreshButtonTitle = "Refresh"
                     />
             </div>
@@ -111,7 +111,7 @@
                         TimerInterval = "@TimeSpan.FromMilliseconds(2500)"
                         CaptchaCanvasClass = ""
 			CaptchaDivClass = "d-flex justify-content-center align-self-center ms-1"
-                        RefreshButtonClass = "bi-arrow-repeat btn-lg"
+                        RefreshButtonClass = "bi-arrow-repeat btn"
 			RefreshButtonTitle = "Refresh"
                     />
             </div>
@@ -155,7 +155,7 @@
                         TimerInterval = "@TimeSpan.FromMilliseconds(2500)"
                         CaptchaCanvasClass = ""
 			CaptchaDivClass = "d-flex justify-content-center align-self-center ms-1"
-                        RefreshButtonClass = "bi-arrow-repeat btn-lg"
+                        RefreshButtonClass = "bi-arrow-repeat btn"
 			RefreshButtonTitle = "Refresh"
                     />
             </div>
@@ -199,7 +199,7 @@
                         TimerInterval = "@TimeSpan.FromMilliseconds(2500)"
                         CaptchaCanvasClass = ""
 			CaptchaDivClass = "d-flex justify-content-center align-self-center ms-1"
-                        RefreshButtonClass = "bi-arrow-repeat btn-lg"
+                        RefreshButtonClass = "bi-arrow-repeat btn"
 			RefreshButtonTitle = "Refresh"
                     />
             </div>
