--- a/src/DNTCaptcha.Blazor.WasmSample/Client/Pages/Components/Login.razor
+++ b/src/DNTCaptcha.Blazor.WasmSample/Client/Pages/Components/Login.razor
@@ -67,7 +67,7 @@
                              TimerInterval="@TimeSpan.FromMilliseconds(2500)"
                              CaptchaCanvasClass=""
                              CaptchaDivClass="d-flex justify-content-center align-self-center ms-1"
-                             RefreshButtonClass="bi-arrow-repeat btn-lg"
+                             RefreshButtonClass="bi-arrow-repeat btn"
                              RefreshButtonTitle="Refresh"/>
         </div>
         <ValidationMessage For="@(() => Model.EnteredCaptchaText1)"/>
@@ -110,7 +110,7 @@
                              TimerInterval="@TimeSpan.FromMilliseconds(2500)"
                              CaptchaCanvasClass=""
                              CaptchaDivClass="d-flex justify-content-center align-self-center ms-1"
-                             RefreshButtonClass="bi-arrow-repeat btn-lg"
+                             RefreshButtonClass="bi-arrow-repeat btn"
                              RefreshButtonTitle="Refresh"/>
         </div>
         <ValidationMessage For="@(() => Model.EnteredCaptchaText2)"/>
@@ -153,7 +153,7 @@
                              TimerInterval="@TimeSpan.FromMilliseconds(2500)"
                              CaptchaCanvasClass=""
                              CaptchaDivClass="d-flex justify-content-center align-self-center ms-1"
-                             RefreshButtonClass="bi-arrow-repeat btn-lg"
+                             RefreshButtonClass="bi-arrow-repeat btn"
                              RefreshButtonTitle="Refresh"/>
         </div>
         <ValidationMessage For="@(() => Model.EnteredCaptchaText3)"/>
@@ -196,7 +196,7 @@
                              TimerInterval="@TimeSpan.FromMilliseconds(2500)"
                              CaptchaCanvasClass=""
                              CaptchaDivClass="d-flex justify-content-center align-self-center ms-1"
-                             RefreshButtonClass="bi-arrow-repeat btn-lg"
+                             RefreshButtonClass="bi-arrow-repeat btn"
                              RefreshButtonTitle="Refresh"/>
         </div>
         <ValidationMessage For="@(() => Model.EnteredCaptchaText4)"/>
