--- a/src/DNTCaptcha.Blazor.WasmSample/Client/Pages/InvisibleCaptchaAtFirst.razor
+++ b/src/DNTCaptcha.Blazor.WasmSample/Client/Pages/InvisibleCaptchaAtFirst.razor
@@ -73,7 +73,7 @@
                                      TimerInterval="@TimeSpan.FromMilliseconds(2500)"
                                      CaptchaCanvasClass=""
                                      CaptchaDivClass="d-flex justify-content-center align-self-center ms-1"
-                                     RefreshButtonClass="bi-arrow-repeat btn-lg"
+                                     RefreshButtonClass="bi-arrow-repeat btn"
                                      RefreshButtonTitle="Refresh"/>
                 </div>
                 <ValidationMessage For="@(() => Model.EnteredCaptchaText)"/>
